# models/article.go
@@ -5,3 +5,13 @@ type Article struct {
 	Title   string `json:"title" gorm:"not null;"`
 	Content string `json:"content" gorm:"not null;"`
 }
+
+type CreateArticle struct {
+	Title   string `json:"title" validate:"required,max=256"`
+	Content string `json:"content" validate:"required"`
+}
+
+type UpdateArticle struct {
+	Title   string `json:"title" validate:"required,max=256"`
+	Content string `json:"content" validate:"required"`
+}
